# auto-merge

./: Cargo.toml  README.md
.github/workflows/: auto-merge.yml  checks.yml  release.yml  staging.yml
src/: cli.rs  main.rs
