[package]
authors     = ["Xavier Lau <x@acg.box>"]
build       = "build.rs"
description = "Merge GitHub Actions pull request automatically."
edition     = "2021"
homepage    = "https://hack.ink/auto-merge"
license     = "GPL-3.0"
name        = "auto-merge"
readme      = "README.md"
repository  = "https://github.com/hack-ink/auto-merge"
version     = "0.1.1"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen-gitcl = { version = "1.0", features = ["cargo"] }

[dependencies]
# crates.io
anyhow     = { version = "1.0" }
clap       = { version = "4.5", features = ["derive"] }
color-eyre = { version = "0.6" }
reqwew     = { version = "0.3" }
serde_json = { version = "1.0" }
tokio      = { version = "1.4", features = ["macros", "rt-multi-thread"] }
